--- a/notebooks/CAR_T_experiment.ipynb
+++ b/notebooks/CAR_T_experiment.ipynb
@@ -89,9 +89,9 @@
    "source": [
     "to reproduce paper, run this notebook 3 time, while edditing the feature selection parmeters:\n",
     "\n",
-    "    1. use_cell_frequencies = True (all other False)\n",
-    "    2. use_TNFA_SIGNALING_VIA_NFKB_CD16_Mono = True (all other False)\n",
-    "    3. use_cell_frequencies = True, use_TNFA_SIGNALING_VIA_NFKB_CD16_Mono = True (all other False)\n"
+    "    1. use_cell_frequencies = True \n",
+    "    2. use_TNFA_SIGNALING_VIA_NFKB_CD16_Mono = True \n",
+    "    3. use_cell_frequencies = True, use_TNFA_SIGNALING_VIA_NFKB_CD16_Mono = True \n"
    ]
   },
   {
